--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "build": "next build",
     "dev": "next dev",
     "start": "next start",
     "preinstall": "npx only-allow pnpm",
