--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "start": "next start",
     "build": "next build",
     "lint": "next lint",
@@ -13,7 +13,9 @@
   "dependencies": {
     "next": "13.1.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.20.2",
+    "@notionhq/client": "^2.2.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
