--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "portfolio",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "^13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "ui": "workspace:*"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -20,8 +19,6 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.13",
-    "eslint": "7.32.0",
-    "eslint-config-custom": "workspace:*",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "tsconfig": "workspace:*",
