--- a/apps/blog/tsconfig.json
+++ b/apps/blog/tsconfig.json
@@ -1,13 +1,5 @@
 {
-  "extends": "tsconfig/nextjs.json",
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"],
-  "compilerOptions": {
-    "baseUrl": "./src",
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
-  }
+  "extends": "tsconfig/astro",
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
