--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.9.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@types/alpinejs": "^3.13.10",
+    "alpinejs": "^3.14.1",
     "astro": "^4.13.1",
+    "clsx": "^2.1.1",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
   }
