--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.9.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@astropub/icons": "^0.2.0",
     "@types/alpinejs": "^3.13.10",
     "alpinejs": "^3.14.1",
     "astro": "^4.13.1",
