--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^4.11.3",
     "astro-pagefind": "^1.5.0",
     "clsx": "^2.1.1",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
